--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -36,13 +36,6 @@ body {
   }
 }
 
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
-
 .container-narrow > hr {
   margin: 30px 0;
 }
@@ -52,9 +45,17 @@ body {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
 
-  .btn {
+  #action-btn {
     font-size: 21px;
     padding: 14px 24px;
+  }
+}
+
+#count-number-table {
+  position: relative;
+  a.pull-right {
+    position: absolute;
+    right: 10px !important;
   }
 }
 
