--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <p class="lead">
-    Click for save the number
+    Click to save the number
   </p>
 
   <!-- Action dropdown, for adding and delete all -->
@@ -68,7 +68,7 @@
 
      <!-- Placeholder where there are no values yet -->
      <tr ng-show="vm.numbers.length === 0">
-       <td>Click on number to start saving!</td>
+       <td>Let's start!</td>
      </tr>
 
    </tbody>
